# pgserver_icu

./: MANIFEST.in  pyproject.toml  setup.py
pgbuild/: Makefile
src/pgserver-icu/: __init__.py  _build.py  postgres_server.py  utils.py
